--- a/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_dialog_mic_manager.xml
+++ b/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_dialog_mic_manager.xml
@@ -78,7 +78,7 @@
         android:drawableStart="@drawable/voice_icon_room_mic_owner_tag"
         android:drawablePadding="4dp"
         android:gravity="center"
-        android:text="@string/voice_room_host"
+        android:text="@string/voice_spatial_host"
         android:textColor="@color/voice_color_333333"
         android:textSize="@dimen/voice_sp_11"
         android:visibility="gone"
