--- a/Android/common/ui-widget/src/main/res/values/colors.xml
+++ b/Android/common/ui-widget/src/main/res/values/colors.xml
@@ -93,5 +93,6 @@
     <color name="white_8_percent">#14FFFFFF</color>
     <color name="white_90_percent">#E5FFFFFF</color>
     <color name="yellow">#f4ea2a</color>
+    <color name="grey_80_percent">#CCCCCCCC</color>
 
 </resources>
