--- a/Android/app/src/main/res/layout/app_item_home_index_sub.xml
+++ b/Android/app/src/main/res/layout/app_item_home_index_sub.xml
@@ -15,6 +15,8 @@
         android:src="@drawable/bg_scene_ktv_solo_chorus"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="2:1"
+        app:strokeWidth="0.5dp"
+        app:strokeColor="@color/grey_80_percent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:shapeAppearance="@style/app_corner16Style" />
