--- a/Android/scenes/ktv_relay/src/main/res/layout/ktv_relay_item_room_list.xml
+++ b/Android/scenes/ktv_relay/src/main/res/layout/ktv_relay_item_room_list.xml
@@ -12,18 +12,28 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:cardCornerRadius="16dp"
+        app:cardCornerRadius="16.5dp"
         app:cardElevation="0dp"
-        android:backgroundTint="@android:color/transparent">
+        android:backgroundTint="@color/white_e3">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/ivBackground"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@mipmap/ktv_img_room_item_bg_0"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:layout_margin="0.5dp"
+            app:cardCornerRadius="16dp"
+            app:cardElevation="0dp"
+            android:backgroundTint="@android:color/transparent">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/ivBackground"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@mipmap/ktv_img_room_item_bg_0"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                />
+        </androidx.cardview.widget.CardView>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
@@ -44,6 +54,7 @@
             android:layout_height="match_parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:scaleType="centerCrop"
             />
     </androidx.cardview.widget.CardView>
 
@@ -97,6 +108,7 @@
         android:drawableStart="@mipmap/icon_user_small"
         android:textColor="@color/def_text_grey_303"
         android:textSize="10sp"
+        android:drawablePadding="2dp"
         app:layout_constraintTop_toTopOf="@+id/tvUserName"
         app:layout_constraintBottom_toBottomOf="@+id/tvUserName"
         app:layout_constraintEnd_toEndOf="parent" />
