--- a/Android/scenes/pure1v1/src/main/res/layout/pure1v1_call_detail_activity.xml
+++ b/Android/scenes/pure1v1/src/main/res/layout/pure1v1_call_detail_activity.xml
@@ -38,7 +38,7 @@
         android:layout_width="200dp"
         android:layout_height="40dp"
         android:layout_marginTop="44dp"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="16dp"
         app:cardElevation="-1dp"
         app:cardCornerRadius="20dp"
         android:backgroundTint="@color/black_20_percent"
@@ -101,6 +101,19 @@
         app:layout_constraintTop_toTopOf="@+id/ivConnect"
         app:layout_constraintStart_toEndOf="@+id/ivConnect"
         app:layout_constraintBottom_toBottomOf="@+id/ivConnect"
+        />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivMore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintTop_toTopOf="@+id/cvRoomInfo"
+        app:layout_constraintBottom_toBottomOf="@+id/cvRoomInfo"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:paddingHorizontal="12dp"
+        android:paddingVertical="16dp"
+        android:src="@mipmap/icon_more"
         />
 
     <androidx.appcompat.widget.AppCompatImageView
