--- a/Android/common/ui-widget/src/main/res/values/themes.xml
+++ b/Android/common/ui-widget/src/main/res/values/themes.xml
@@ -16,6 +16,23 @@
         <item name="android:statusBarColor" tools:targetApi="l">@android:color/transparent</item>
     </style>
 
+    <!-- Base application theme. -->
+    <style name="def_material_theme" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+        <!-- Status bar color. -->
+        <!-- Customize your theme here. -->
+        <item name="android:statusBarColor" >@android:color/transparent</item>
+    </style>
+
     <style name="def_et_input">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">48dp</item>
@@ -62,7 +79,6 @@
         <item name="android:textSize">18sp</item>
         <item name="android:digits">0123456789</item>
         <item name="android:maxLength">2</item>
-        <item name="android:layout_marginStart">6dp</item>
     </style>
 
     <style name="title_view">
