--- a/Android/scenes/ktv/src/main/res/layout/ktv_dialog_create_room.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_dialog_create_room.xml
@@ -1,46 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_dialog_more"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="20dp"
     android:background="@drawable/create_room_top_radius"
     android:gravity="center"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:paddingBottom="20dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvTips"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_marginHorizontal="20dp"
-        app:cardCornerRadius="8dp"
+        android:layout_marginTop="20dp"
         app:cardBackgroundColor="#1AFA396A"
+        app:cardCornerRadius="8dp"
         app:cardElevation="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
-            android:src="@mipmap/ic_tip_error"
-            />
+            android:layout_marginTop="10dp"
+            android:src="@mipmap/ic_tip_error" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@id/tvTips"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp"
             android:layout_marginStart="20dp"
-            android:textColor="#303553"
-            android:textSize="12sp"
+            android:padding="8dp"
             android:text="@string/ktv_create_room_tips"
-            />
+            android:textColor="#303553"
+            android:textSize="12sp" />
 
     </androidx.cardview.widget.CardView>
 
@@ -50,85 +48,94 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/cvTips"
-        app:layout_constraintEnd_toEndOf="parent"
         android:drawableStart="@mipmap/ic_random"
         android:drawablePadding="3dp"
         android:text="@string/ktv_random"
         android:textColor="#3C4267"
         android:textSize="14sp"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cvTips" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:text="@string/ktv_room_title"
         android:textColor="@color/black"
         android:textSize="14sp"
-        android:text="@string/ktv_room_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btnRandom" />
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etRoomName"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/layoutRoomName"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnRandom"
-        app:layout_constraintStart_toStartOf="parent"
+        android:background="@android:color/transparent"
+        android:paddingVertical="8dp"
+        app:boxBackgroundMode="none"
+        app:boxStrokeColor="@android:color/transparent"
+        app:hintEnabled="false"
         app:layout_constraintEnd_toEndOf="parent"
-        android:padding="12dp"
-        android:background="@drawable/create_room_et_selector"
-        android:hint="@string/ktv_room_name_hint"
-        android:imeOptions="actionDone"
-        android:singleLine="true"
-        android:maxLines="1"
-        android:maxLength="11"
-        android:gravity="start|center"
-        android:textColor="#040925"
-        android:textColorHint="#979CBB"
-        android:textSize="15sp"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnRandom">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etRoomName"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:background="@drawable/create_room_et_selector"
+            android:gravity="start|center"
+            android:hint="@string/ktv_room_name_hint"
+            android:imeOptions="actionDone"
+            android:maxLength="15"
+            android:maxLines="1"
+            android:padding="12dp"
+            android:singleLine="true"
+            android:textColor="#040925"
+            android:textColorHint="#979CBB"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnRandom" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:layout_marginStart="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/etRoomName"
-        app:layout_constraintStart_toStartOf="parent"
-        android:textColor="#3C4267"
+        android:layout_marginTop="16dp"
         android:text="@string/ktv_room_pwd"
-        />
+        android:textColor="#3C4267"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layoutRoomName" />
 
     <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/cbPassword"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginStart="4dp"
-        app:layout_constraintStart_toEndOf="@+id/tvPassword"
-        app:layout_constraintTop_toTopOf="@+id/tvPassword"
-        app:layout_constraintBottom_toBottomOf="@+id/tvPassword"
-        android:gravity="center"
-        android:button="@drawable/cb_def_selector"
         android:background="@android:color/transparent"
-        />
+        android:button="@drawable/cb_def_selector"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="@+id/tvPassword"
+        app:layout_constraintStart_toEndOf="@+id/tvPassword"
+        app:layout_constraintTop_toTopOf="@+id/tvPassword" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvPWDTips"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
-        app:layout_constraintTop_toTopOf="@id/tvPassword"
+        android:text="@string/ktv_please_input_4_pwd"
+        android:textColor="#FA396A"
+        android:textSize="12dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/tvPassword"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/ktv_please_input_4_pwd"
-        android:textSize="12dp"
-        android:textColor="#FA396A"
-        android:visibility="gone"
-        />
+        app:layout_constraintTop_toTopOf="@id/tvPassword" />
+
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etCode1"
@@ -165,7 +172,7 @@
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etCode4"
-        app:layout_constraintEnd_toEndOf="@id/etRoomName"
+        app:layout_constraintEnd_toEndOf="@id/layoutRoomName"
         app:layout_constraintTop_toTopOf="@id/etCode3"
         style="@style/input_v_code"
         android:background="@drawable/create_room_et_selector"
@@ -177,16 +184,15 @@
         android:id="@+id/btnCreateRoom"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_marginTop="24dp"
         android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/create_room_btn_blue"
         android:gravity="center"
+        android:text="@string/ktv_create_room"
         android:textColor="@color/white"
         android:textSize="16sp"
-        android:text="@string/ktv_create_room"
-        android:background="@drawable/create_room_btn_blue"
-        app:layout_constraintTop_toBottomOf="@+id/etCode1"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etCode1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
