--- a/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_singbattle_dialog_create_room.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_singbattle_dialog_create_room.xml
@@ -69,35 +69,47 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btnRandom" />
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etRoomName"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/layoutRoomName"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnRandom"
-        app:layout_constraintStart_toStartOf="parent"
+        android:background="@android:color/transparent"
+        android:paddingVertical="8dp"
+        app:boxBackgroundMode="none"
+        app:boxStrokeColor="@android:color/transparent"
+        app:hintEnabled="false"
         app:layout_constraintEnd_toEndOf="parent"
-        android:padding="12dp"
-        android:background="@drawable/create_room_et_selector"
-        android:hint="@string/ktv_singbattle_room_name_hint"
-        android:imeOptions="actionDone"
-        android:singleLine="true"
-        android:maxLines="1"
-        android:maxLength="11"
-        android:gravity="start|center"
-        android:textColor="#040925"
-        android:textColorHint="#979CBB"
-        android:textSize="15sp"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnRandom">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etRoomName"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            app:layout_constraintTop_toBottomOf="@+id/btnRandom"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:padding="12dp"
+            android:background="@drawable/create_room_et_selector"
+            android:hint="@string/ktv_singbattle_room_name_hint"
+            android:imeOptions="actionDone"
+            android:singleLine="true"
+            android:maxLines="1"
+            android:maxLength="15"
+            android:gravity="start|center"
+            android:textColor="#040925"
+            android:textColorHint="#979CBB"
+            android:textSize="15sp" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginStart="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/etRoomName"
+        app:layout_constraintTop_toBottomOf="@+id/layoutRoomName"
         app:layout_constraintStart_toStartOf="parent"
         android:textColor="#3C4267"
         android:text="@string/ktv_singbattle_room_pwd"
@@ -165,7 +177,7 @@
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etCode4"
-        app:layout_constraintEnd_toEndOf="@id/etRoomName"
+        app:layout_constraintEnd_toEndOf="@id/layoutRoomName"
         app:layout_constraintTop_toTopOf="@id/etCode3"
         style="@style/input_v_code"
         android:background="@drawable/create_room_et_selector"
