--- a/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_room_create_activity.xml
+++ b/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_room_create_activity.xml
@@ -52,30 +52,48 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/tvTitle" />
 
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/etRoomName"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/layoutRoomName"
             android:layout_width="match_parent"
-            android:layout_height="44dp"
+            android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
             android:layout_marginTop="8dp"
-            android:background="@drawable/show_to1v1_input_corner_radius"
-            android:gravity="center_vertical"
-            android:hint="@string/show_to1v1_room_name_hint"
-            android:textSize="14sp"
-            android:maxEms="24"
-            android:maxLength="24"
-            android:singleLine="true"
-            android:lines="1"
-            android:maxLines="1"
-            android:paddingHorizontal="20dp"
-            app:layout_constraintTop_toBottomOf="@id/tvTitle" />
+            android:background="@android:color/transparent"
+            android:paddingVertical="8dp"
+            app:boxBackgroundMode="none"
+            app:boxStrokeColor="@android:color/transparent"
+            app:hintEnabled="false"
+            app:layout_constraintTop_toBottomOf="@id/tvTitle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etRoomName"
+                android:layout_width="match_parent"
+                android:layout_height="44dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="12dp"
+                android:background="@drawable/show_to1v1_input_corner_radius"
+                android:hint="@string/show_to1v1_room_name_hint"
+                android:imeOptions="actionDone"
+                android:singleLine="true"
+                android:maxLines="1"
+                android:maxEms="24"
+                android:maxLength="24"
+                android:gravity="start|center"
+                android:textColor="#040925"
+                android:textColorHint="#979CBB"
+                android:textSize="15sp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvContent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="20dp"
             android:drawableStart="@drawable/show_to1v1_notice"
             android:drawablePadding="5dp"
             android:text="@string/show_to1v1_create_room_tips"
@@ -83,7 +101,7 @@
             android:textSize="11sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etRoomName" />
+            app:layout_constraintTop_toBottomOf="@+id/layoutRoomName" />
 
         <LinearLayout
             android:id="@+id/layoutRoomCreating"
