--- a/Android/scenes/ktv/src/main/res/layout/activity_room_list.xml
+++ b/Android/scenes/ktv/src/main/res/layout/activity_room_list.xml
@@ -10,7 +10,9 @@
         android:id="@+id/title_view"
         style="@style/title_view"
         app:ctv_centerText="@string/ktv_online"
-        tools:ignore="MissingConstraints" />
+        app:ctv_rightText="设置"
+        tools:ignore="MissingConstraints"
+        />
 
 
     <com.scwang.smart.refresh.layout.SmartRefreshLayout
