--- a/Android/scenes/ktv/src/main/res/layout/activity_room_list.xml
+++ b/Android/scenes/ktv/src/main/res/layout/activity_room_list.xml
@@ -10,6 +10,7 @@
         android:id="@+id/title_view"
         style="@style/title_view"
         app:ctv_centerText="@string/ktv_online"
+        app:ctv_rightText="设置"
         tools:ignore="MissingConstraints" />
 
 
