--- a/Android/app/src/main/res/layout/app_fragment_login_verify.xml
+++ b/Android/app/src/main/res/layout/app_fragment_login_verify.xml
@@ -41,7 +41,7 @@
         app:layout_constraintStart_toStartOf="@id/tvTitle"
         app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
-    <com.agora.entfulldemo.widget.RoomEncryptionInputView
+    <io.agora.scene.widget.RoomEncryptionInputView
         android:id="@+id/etCode"
         android:layout_width="0dp"
         android:layout_height="60dp"
@@ -51,19 +51,19 @@
         android:inputType="number"
         android:textCursorDrawable="@drawable/app_bg_edit_cursor"
         android:visibility="visible"
-        app:app_backColor="@color/white"
-        app:app_checkedColor="#156EF3"
-        app:app_defaultColor="@color/white"
-        app:app_isPwd="false"
-        app:app_isWaitInput="true"
-        app:app_round="8dp"
-        app:app_textColor="#040925"
-        app:app_textLength="4"
-        app:app_textSize="18sp"
-        app:app_waitInputColor="#4E5969"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvPageInfo" />
+        app:layout_constraintTop_toBottomOf="@+id/tvPageInfo"
+        app:ui_widget_backColor="@color/white"
+        app:ui_widget_checkedColor="#156EF3"
+        app:ui_widget_defaultColor="@color/white"
+        app:ui_widget_isPwd="false"
+        app:ui_widget_isWaitInput="true"
+        app:ui_widget_round="8dp"
+        app:ui_widget_textColor="#040925"
+        app:ui_widget_textLength="4"
+        app:ui_widget_textSize="18sp"
+        app:ui_widget_waitInputColor="#4E5969" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvRegainCode"
