--- a/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_singbattle_dialog_create_room.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_singbattle_dialog_create_room.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_dialog_more"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -142,48 +143,44 @@
         android:visibility="gone"
         />
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etCode1"
-        android:layout_marginStart="0dp"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/layoutPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:background="@android:color/transparent"
+        android:paddingVertical="8dp"
+        app:boxBackgroundMode="none"
         android:layout_marginTop="25dp"
-        app:layout_constraintStart_toStartOf="@id/tvPassword"
-        app:layout_constraintTop_toBottomOf="@id/tvPassword"
-        style="@style/input_v_code"
-        android:background="@drawable/create_room_et_selector"
+        app:boxStrokeColor="@android:color/transparent"
+        app:hintEnabled="false"
         android:visibility="gone"
-        />
+        tools:visibility="visible"
+        app:layout_constraintEnd_toEndOf="@+id/layoutRoomName"
+        app:layout_constraintStart_toStartOf="@id/layoutRoomName"
+        app:layout_constraintTop_toBottomOf="@id/tvPassword">
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etCode2"
-        app:layout_constraintEnd_toStartOf="@id/etCode3"
-        app:layout_constraintStart_toEndOf="@id/etCode1"
-        app:layout_constraintTop_toTopOf="@id/etCode1"
-        style="@style/input_v_code"
-        android:background="@drawable/create_room_et_selector"
-        android:enabled="false"
-        android:visibility="gone"
-        />
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etCode3"
-        app:layout_constraintEnd_toStartOf="@id/etCode4"
-        app:layout_constraintStart_toEndOf="@id/etCode2"
-        app:layout_constraintTop_toTopOf="@id/etCode2"
-        style="@style/input_v_code"
-        android:background="@drawable/create_room_et_selector"
-        android:enabled="false"
-        android:visibility="gone"
-        />
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etCode4"
-        app:layout_constraintEnd_toEndOf="@id/layoutRoomName"
-        app:layout_constraintTop_toTopOf="@id/etCode3"
-        style="@style/input_v_code"
-        android:background="@drawable/create_room_et_selector"
-        android:enabled="false"
-        android:visibility="gone"
-        />
+        <io.agora.scene.widget.RoomEncryptionInputView
+            android:id="@+id/etCode"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_centerInParent="true"
+            android:inputType="number"
+            android:textCursorDrawable="@drawable/bg_edit_cursor"
+            android:visibility="visible"
+            android:paddingVertical="0dp"
+            android:background="@android:color/transparent"
+            app:ui_widget_backColor="#F5F8FF"
+            app:ui_widget_checkedColor="#156EF3"
+            app:ui_widget_defaultColor="@color/white"
+            app:ui_widget_isPwd="false"
+            app:ui_widget_isWaitInput="true"
+            app:ui_widget_round="8dp"
+            app:ui_widget_textColor="#040925"
+            app:ui_widget_textLength="4"
+            app:ui_widget_textSize="16sp"
+            app:ui_widget_waitInputColor="#4E5969" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnCreateRoom"
@@ -196,7 +193,7 @@
         android:textSize="16sp"
         android:text="@string/ktv_singbattle_create_room"
         android:background="@drawable/create_room_btn_blue"
-        app:layout_constraintTop_toBottomOf="@+id/etCode1"
+        app:layout_constraintTop_toBottomOf="@+id/layoutPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
