[Feat] remove unsless resources

--- a/Android/app/src/main/res/layout/app_fragment_home_mine.xml
+++ b/Android/app/src/main/res/layout/app_fragment_home_mine.xml
@@ -49,7 +49,7 @@
                         android:background="@null"
                         android:gravity="center"
                         android:imeOptions="actionDone"
-                        android:inputType="text"
+                        android:inputType="textNoSuggestions"
                         android:maxLength="10"
                         android:textColor="@color/def_text_color_040"
                         android:textSize="18sp"
