--- a/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_singbattle_dialog_music_setting.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_singbattle_dialog_music_setting.xml
@@ -180,7 +180,8 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
