--- a/Android/scenes/show/src/main/res/layout/show_live_prepare_activity.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_prepare_activity.xml
@@ -51,16 +51,6 @@
         android:paddingVertical="12dp"
         app:layout_constraintTop_toBottomOf="@id/llTitle">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/ivRoomCover"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:scaleType="centerCrop"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearance="@style/show_roundStyle_12"
-            tools:src="@mipmap/portrait01" />
-
         <EditText
             android:id="@+id/etRoomName"
             android:layout_width="0dp"
@@ -78,8 +68,8 @@
             app:layout_constraintBottom_toTopOf="@id/tvRoomId"
             app:layout_constraintEnd_toStartOf="@id/ivEdit"
             app:layout_constraintHorizontal_weight="0.6"
-            app:layout_constraintStart_toEndOf="@id/ivRoomCover"
-            app:layout_constraintTop_toTopOf="@id/ivRoomCover"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="12345345435345345345345" />
 
         <ImageView
@@ -97,13 +87,12 @@
             android:id="@+id/tvRoomId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
+            android:layout_marginTop="15dp"
             android:ellipsize="marquee"
             android:maxWidth="120dp"
             android:singleLine="true"
             android:textColor="@color/white_60_percent"
-            app:layout_constraintBottom_toBottomOf="@id/ivRoomCover"
-            app:layout_constraintStart_toEndOf="@id/ivRoomCover"
+            app:layout_constraintStart_toStartOf="@id/etRoomName"
             app:layout_constraintTop_toBottomOf="@id/etRoomName"
             tools:text="ID: 1234566" />
 
