--- a/Android/scenes/ktv/src/main/res/layout/ktv_dialog_sound_card.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_dialog_sound_card.xml
@@ -63,6 +63,7 @@
         app:layout_constraintTop_toBottomOf="@+id/mtBottomSheetTitle" />
 
     <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/tvInputDevice"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_marginEnd="20dp"
