--- a/Android/scenes/ktv_relay/src/main/res/layout/ktv_relay_activity_room_living.xml
+++ b/Android/scenes/ktv_relay/src/main/res/layout/ktv_relay_activity_room_living.xml
@@ -144,10 +144,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvUserMember"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="12dp"
         android:overScrollMode="never"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintTop_toBottomOf="@+id/singRelayGameView"
         app:layout_constraintBottom_toBottomOf="parent"
