--- a/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_singbattle_activity_room_living.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_singbattle_activity_room_living.xml
@@ -152,7 +152,7 @@
         android:clipToPadding="false"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintTop_toBottomOf="@+id/singBattleGameView"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/cbMic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:spanCount="4"
