--- a/Android/scenes/joy/src/main/res/layout/joy_live_prepare_activity.xml
+++ b/Android/scenes/joy/src/main/res/layout/joy_live_prepare_activity.xml
@@ -11,44 +11,41 @@
         android:layout_height="match_parent"
         android:background="@color/black_80_percent" />
 
-    <FrameLayout
+    <io.agora.scene.widget.CommonTitleView
         android:id="@+id/llTitle"
+        style="@style/title_view"
+        app:ctv_centerText="@string/joy_play"
+        android:layout_marginTop="25dp"
+        app:ctv_leftImageSrc="@mipmap/icon_close"
+        app:ctv_centerTextColor="@color/white"
+        tools:ignore="MissingConstraints" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/vpGame"
         android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="2:1"
+        android:layout_marginHorizontal="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/llTitle"/>
+
+    <io.agora.scene.joy.ui.widget.FadeDotsIndicator
+        android:id="@+id/dotIndicator"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        android:orientation="horizontal"
-        android:paddingTop="@dimen/base_status_height"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/ivClose"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingHorizontal="16dp"
-            android:paddingVertical="12dp"
-            android:src="@mipmap/icon_close" />
-
-        <TextView
-            android:id="@+id/tvTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:text="@string/joy_play"
-            android:textColor="@android:color/white"
-            android:textSize="16sp" />
-    </FrameLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/vpGame"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clRoomInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/joy_bg_create_roomname"
         android:paddingHorizontal="10dp"
-
-        app:layout_constraintTop_toBottomOf="@id/llTitle">
+        app:layout_constraintTop_toBottomOf="@id/vpGame">
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/etRoomName"
@@ -62,18 +59,19 @@
             android:maxLength="16"
             android:singleLine="true"
             android:textColor="@color/white"
+            android:hint="@string/joy_live_prepare_room_name_hint"
             android:textColorHint="@color/white_60_percent"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="12345345435345345345345" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/iBtnRefresh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="15dp"
+            android:background="@android:color/transparent"
             android:src="@drawable/joy_icon_refresh"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -87,7 +85,6 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
         app:layout_constraintBottom_toBottomOf="parent">
-
 
         <TextView
             android:id="@+id/tvTip"
